force-app/main/default/objects/Asset_Telematic__c/Asset_Telematic__c.object-meta.xml
<CustomObject>
    <label>Asset Telematic</label>
    <nameField>
        <displayFormat>AT-{000000}</displayFormat>
        <label>Asset Telematic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Telematics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>