force-app/main/default/objects/Asset_Telematic__c/fields/Measure_Name__c.field-meta.xml
<CustomField>
    <fullName>Measure_Name__c</fullName>
    <label>Measure Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>