force-app/main/default/objects/Asset_Telematic__c/fields/Measure_Time__c.field-meta.xml
<CustomField>
    <fullName>Measure_Time__c</fullName>
    <label>Measure Time</label>
    <type>DateTime</type>
</CustomField>