force-app/main/default/objects/Asset_Telematic__c/fields/Measure_Value__c.field-meta.xml
<CustomField>
    <fullName>Measure_Value__c</fullName>
    <label>Measure Value</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>