force-app/main/default/objects/Asset_Telematic__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Measure_Name__c</columns>
    <columns>Measure_Time__c</columns>
    <columns>Measure_Value__c</columns>
    <columns>Asset__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>