force-app/main/default/objects/Asset_Telematic__c/listViews/telemetry.listView-meta.xml
<ListView>
    <fullName>telemetry</fullName>
    <columns>NAME</columns>
    <columns>Measure_Name__c</columns>
    <columns>Measure_Time__c</columns>
    <columns>Measure_Value__c</columns>
    <filterScope>Mine</filterScope>
    <label>telemetry</label>
</ListView>